{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 378,
  "lineage": "e04b4316-8d58-8040-dd1f-eadfbb12b7d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:933277666186:route-table/rtb-0b79856bfd811d590",
            "default_route_table_id": "rtb-0b79856bfd811d590",
            "id": "rtb-0b79856bfd811d590",
            "owner_id": "933277666186",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0130982b82ab378bc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-duly-beloved-beetle"
            },
            "tags_all": {
              "Name": "private-duly-beloved-beetle"
            },
            "timeouts": null,
            "vpc_id": "vpc-071498b612f4f0608"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Windows_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ddbff08d35725c15",
            "arn": "arn:aws:ec2:us-east-2:933277666186:elastic-ip/eipalloc-0ddbff08d35725c15",
            "association_id": "eipassoc-03b73d7282efc9981",
            "domain": "vpc",
            "id": "eipalloc-0ddbff08d35725c15",
            "instance": "i-00b4e75db29965a5c",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0009fa616361114d0",
            "private_dns": "ip-172-16-4-166.us-east-2.compute.internal",
            "private_ip": "172.16.4.166",
            "public_dns": "ec2-18-116-171-88.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.171.88",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "duly-beloved-beetle"
            },
            "tags_all": {
              "Name": "duly-beloved-beetle"
            }
          },
          "dependencies": [
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebf908330bf26d72",
            "arn": "arn:aws:ec2:us-east-2:933277666186:elastic-ip/eipalloc-0ebf908330bf26d72",
            "association_id": "eipassoc-04a97473559a4e121",
            "domain": "vpc",
            "id": "eipalloc-0ebf908330bf26d72",
            "network_border_group": "us-east-2",
            "network_interface": "eni-07728aedfc70cb7f0",
            "private_dns": "ip-172-16-7-155.us-east-2.compute.internal",
            "private_ip": "172.16.7.155",
            "public_dns": "ec2-3-20-178-234.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.178.234",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "duly-beloved-beetle"
            },
            "tags_all": {
              "Name": "duly-beloved-beetle"
            }
          },
          "dependencies": [
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bb7d855677353076",
            "arn": "arn:aws:ec2:us-east-2:933277666186:instance/i-084948f72cac2a3bc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02a7a3af67f688182",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084948f72cac2a3bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Windows-duly-beloved-beetle",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ad5249dfe8a7c3a5"
              }
            ],
            "primary_network_interface_id": "eni-0ad5249dfe8a7c3a5",
            "private_dns": "ip-172-16-13-18.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.13.18",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02a7a3af67f688182",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ee925fbb9f70d75",
            "tags": {
              "Name": "duly-beloved-beetle"
            },
            "tags_all": {
              "Name": "duly-beloved-beetle"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f5ec9cc0612e4007"
            ]
          },
          "dependencies": [
            "aws_instance.windows-Instance",
            "aws_key_pair.Divya_key",
            "aws_security_group.Linux_SG",
            "aws_security_group.Windows_SG",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.divya_pet",
            "tls_private_key.divya_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows-Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05b00365623a86bd3",
            "arn": "arn:aws:ec2:us-east-2:933277666186:instance/i-0087a715b81c3059e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0224291bd71e1ec49",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": true,
            "hibernation": false,
            "id": "i-0087a715b81c3059e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Windows-duly-beloved-beetle",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "password_data": "haiQxHROZG5pfvAIaELyjWKrozX2q25ygIdSJeS4C+qbL32pzejPtH2VX3zrl+ri4tWRe3fVi7zhi7E/enr4WtdyooGXhT3n/8AaigilKzOOA+2w7yvFp4FIHb6p6HSUW9V2CxPry+ruJYZoYpyt+5LC6joSCfmZggyCBWKt4TOBV6y9CD3otGpoga0+FBBwSdxMsbJEoBBqtE19rzHVA4SotPEIVGtd/uUem2puqpkQBmuE9BYS0F0oKvl66dytnse0Qu2Okhu/K9sMr+cbAJ6iWYVT2Uw0dWXb2n/QB3YmN4Eg9YP+9gdOqXQepXlcdl3N+hotVnsnYjroqTgukw==",
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0213aa5eb7e37183c"
              }
            ],
            "primary_network_interface_id": "eni-0213aa5eb7e37183c",
            "private_dns": "ip-172-16-7-199.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.7.199",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0224291bd71e1ec49",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06dcadce443ebc0cd",
            "tags": {
              "Name": "duly-beloved-beetle"
            },
            "tags_all": {
              "Name": "duly-beloved-beetle"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd0dd3b1c126ed06"
            ]
          },
          "dependencies": [
            "aws_key_pair.Divya_key",
            "aws_security_group.Windows_SG",
            "aws_subnet.public_subnet",
            "random_pet.divya_pet",
            "tls_private_key.divya_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:933277666186:internet-gateway/igw-0e7c793c7d81ba919",
            "id": "igw-0e7c793c7d81ba919",
            "owner_id": "933277666186",
            "region": "us-east-2",
            "tags": {
              "Name": "IGW-duly-beloved-beetle"
            },
            "tags_all": {
              "Name": "IGW-duly-beloved-beetle"
            },
            "vpc_id": "vpc-071498b612f4f0608"
          },
          "dependencies": [
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebf908330bf26d72",
            "association_id": "eipassoc-04a97473559a4e121",
            "connectivity_type": "public",
            "id": "nat-0130982b82ab378bc",
            "network_interface_id": "eni-07728aedfc70cb7f0",
            "private_ip": "172.16.7.155",
            "public_ip": "3.20.178.234",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06dcadce443ebc0cd",
            "tags": {
              "Name": "NAT-duly-beloved-beetle"
            },
            "tags_all": {
              "Name": "NAT-duly-beloved-beetle"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:933277666186:network-acl/acl-041569fc399381500",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 500,
                "to_port": 0
              }
            ],
            "id": "acl-041569fc399381500",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "172.16.4.166/32",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "172.16.4.166/32",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 3306
              }
            ],
            "owner_id": "933277666186",
            "region": "us-east-2",
            "subnet_ids": [
              "subnet-05ee925fbb9f70d75"
            ],
            "tags": {
              "Name": "NACL-Private-duly-beloved-beetle"
            },
            "tags_all": {
              "Name": "NACL-Private-duly-beloved-beetle"
            },
            "vpc_id": "vpc-071498b612f4f0608"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:933277666186:network-acl/acl-00ab3e97bfc58cff0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 500,
                "to_port": 0
              }
            ],
            "id": "acl-00ab3e97bfc58cff0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "98.6.6.53/32",
                "from_port": 3389,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 3389
              }
            ],
            "owner_id": "933277666186",
            "region": "us-east-2",
            "subnet_ids": [
              "subnet-06dcadce443ebc0cd"
            ],
            "tags": {
              "Name": "NACL-duly-beloved-beetle"
            },
            "tags_all": {
              "Name": "NACL-duly-beloved-beetle"
            },
            "vpc_id": "vpc-071498b612f4f0608"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_private_inbound_dynamic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3412198111",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-041569fc399381500",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.nacl_private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_private_inbound_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "172.16.7.199/32",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2873014164",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-041569fc399381500",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.windows-Instance",
            "aws_key_pair.Divya_key",
            "aws_network_acl.nacl_private",
            "aws_security_group.Windows_SG",
            "aws_subnet.public_subnet",
            "random_pet.divya_pet",
            "tls_private_key.divya_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_private_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "172.16.7.199/32",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1990749713",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-041569fc399381500",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.windows-Instance",
            "aws_key_pair.Divya_key",
            "aws_network_acl.nacl_private",
            "aws_security_group.Windows_SG",
            "aws_subnet.public_subnet",
            "random_pet.divya_pet",
            "tls_private_key.divya_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_private_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3626194770",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-041569fc399381500",
            "protocol": "-1",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 500,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.nacl_private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_inbound_dynamic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4110576802",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-00ab3e97bfc58cff0",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1221066860",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-00ab3e97bfc58cff0",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2506021353",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-00ab3e97bfc58cff0",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_inbound_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "98.6.6.53/32",
            "egress": false,
            "from_port": 3389,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-680834343",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-00ab3e97bfc58cff0",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3682819482",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-00ab3e97bfc58cff0",
            "protocol": "-1",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 500,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:933277666186:route-table/rtb-028a9b72a5f39a02a",
            "id": "rtb-028a9b72a5f39a02a",
            "owner_id": "933277666186",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7c793c7d81ba919",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-duly-beloved-beetle"
            },
            "tags_all": {
              "Name": "public-duly-beloved-beetle"
            },
            "timeouts": null,
            "vpc_id": "vpc-071498b612f4f0608"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9f39ce71104dd73",
            "region": "us-east-2",
            "route_table_id": "rtb-028a9b72a5f39a02a",
            "subnet_id": "subnet-06dcadce443ebc0cd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Linux_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:933277666186:security-group/sg-0f5ec9cc0612e4007",
            "description": "Allows MYSQL and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5ec9cc0612e4007",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.7.199/32"
                ],
                "description": "Allows inbound MYSQL 3306",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "172.16.7.199/32"
                ],
                "description": "Allows inbound SSH 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Linux-duly-beloved-beetle-SG",
            "name_prefix": "",
            "owner_id": "933277666186",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071498b612f4f0608"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.windows-Instance",
            "aws_key_pair.Divya_key",
            "aws_security_group.Windows_SG",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.divya_pet",
            "tls_private_key.divya_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Windows_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:933277666186:security-group/sg-0fd0dd3b1c126ed06",
            "description": "Allows RDP, HTTP and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows All outbound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd0dd3b1c126ed06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows inbound HTTP 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows inbound HTTPS 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "98.6.6.53/32"
                ],
                "description": "Allows inbound RDP 3389",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "Windows-duly-beloved-beetle-SG",
            "name_prefix": "",
            "owner_id": "933277666186",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Windows-duly-beloved-beetle-SG"
            },
            "tags_all": {
              "Name": "Windows-duly-beloved-beetle-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-071498b612f4f0608"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:933277666186:subnet/subnet-05ee925fbb9f70d75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ee925fbb9f70d75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "933277666186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "private-duly-beloved-beetle"
            },
            "tags_all": {
              "Name": "private-duly-beloved-beetle"
            },
            "vpc_id": "vpc-071498b612f4f0608"
          },
          "dependencies": [
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:933277666186:subnet/subnet-06dcadce443ebc0cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dcadce443ebc0cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "933277666186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "public-duly-beloved-beetle"
            },
            "tags_all": {
              "Name": "public-duly-beloved-beetle"
            },
            "vpc_id": "vpc-071498b612f4f0608"
          },
          "dependencies": [
            "aws_vpc.vpc-01",
            "random_pet.divya_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:933277666186:vpc/vpc-071498b612f4f0608",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/20",
            "default_network_acl_id": "acl-0034ff751e41107bd",
            "default_route_table_id": "rtb-0b79856bfd811d590",
            "default_security_group_id": "sg-0e079e1160b6fa773",
            "dhcp_options_id": "dopt-0509141b68b0549e8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071498b612f4f0608",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b79856bfd811d590",
            "owner_id": "933277666186",
            "region": "us-east-2",
            "tags": {
              "Name": "duly-beloved-beetle"
            },
            "tags_all": {
              "Name": "duly-beloved-beetle"
            }
          },
          "dependencies": [
            "random_pet.divya_pet"
          ]
        }
      ]
    }
  ]
}